--- a/set.env
+++ b/set.env
@@ -8,7 +8,7 @@ AUTO_READ_STATUS=no
 AUTO_DOWNLOAD_STATUS=no
 
 # The display name of your bot
-BOT_NAME=Zokou-MD
+BOT_NAME=𓄂𝐅𝐈𝐙𝐙𝐘 ⃝𝐒𝐇𝐎𝐓𝐓𝐀𓅓
 
 # The visual theme for bot menus (use a preset name or comma-separated media links)
 MENU_THEME=LUFFY
@@ -24,7 +24,7 @@ MODE_PUBLIC=yes
 PRESENCE=1
 
 # WhatsApp session ID (used to log in to your account)
-SESSION_ID=
+SESSION_ID=ZOKOU-MD-WHATSAPP-BOT=>f17dc90d85
 
 # Your display name (owner's name)
 OWNER_NAME=Djalega++
